--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -17,13 +19,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: r-lib/actions/setup-pandoc@v3
 
-      - uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-r@v3
         with:
           r-version: "release"
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - uses: r-lib/actions/setup-r-dependencies@v3
         with:
           extra-packages: any::pkgdown
           needs: website
@@ -36,6 +38,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Deploy to gh-pages
-        uses: r-lib/actions/deploy-pkgdown@v2
+        if: ${{ github.event_name == 'push' }}
+        uses: r-lib/actions/deploy-pkgdown@v3
         with:
           branch: gh-pages
