1. Complete rewrite of high-level R functions 2. Add test suite from gb-io.py, gb-io, and biopython

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,12 @@ Config/rextendr/version: 0.4.2
 SystemRequirements: Cargo (Rust's package manager), rustc >= 1.65.0, xz
 Depends: 
     R (>= 4.2)
+Imports:
+    Biostrings,
+    GenomicRanges,
+    IRanges,
+    S4Vectors,
+    tibble
 Suggests: 
     knitr,
     rmarkdown,
